--- a/.github/workflows/slack-testing.yml
+++ b/.github/workflows/slack-testing.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Send Slack alert for P0 issue
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_PRIORITY_GITHUB_ISSUES_WEBHOOK }}
           GITHUB_EVENT_PATH: ${{ github.event_path }}
         run: |
           TITLE=$(jq -r '.issue.title' "$GITHUB_EVENT_PATH")
