--- a/.github/workflows/slack-testing.yml
+++ b/.github/workflows/slack-testing.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   notify-slack:
+    # Only fire when the label applied is exactly "P0"
     if: ${{ github.event.label.name == 'P0' }}
     runs-on: ubuntu-latest
     steps:
@@ -13,15 +14,20 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_PRIORITY_GITHUB_ISSUES_WEBHOOK }}
         run: |
+          set -euo pipefail
           TITLE=$(jq -r '.issue.title' "$GITHUB_EVENT_PATH")
           NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
           URL=$(jq -r '.issue.html_url' "$GITHUB_EVENT_PATH")
           SENDER=$(jq -r '.sender.login' "$GITHUB_EVENT_PATH")
           REPO="${GITHUB_REPOSITORY}"
-          read -r -d '' PAYLOAD <<EOF
-          {
-            "text": ":rotating_light: *P0 issue labeled* in ${REPO}\n*#${NUMBER}:* ${TITLE}\nLabeled by: @${SENDER}\n<${URL}|View Issue>"
-          }
-          EOF
+
+          PAYLOAD=$(jq -n \
+            --arg repo "$REPO" \
+            --arg num "$NUMBER" \
+            --arg title "$TITLE" \
+            --arg sender "$SENDER" \
+            --arg url "$URL" \
+            '{text: ":rotating_light: *P0 issue labeled* in \($repo)\n*#\($num):* \($title)\nLabeled by: @\($sender)\n<\($url)|View Issue>"}')
+
           curl -sS -X POST -H 'Content-type: application/json' \
             --data "$PAYLOAD" "$SLACK_WEBHOOK_URL"
